# bot_trader

./: README.md  pyproject.toml
bot_trader/: .env.example  Dockerfile  api_request.py  bot.py  db.py  docker-compose.yml  postgre.py  pyproject.toml
